force-app/main/default/objects/IfStaticValue__c/IfStaticValue__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>인터페이스 상수 정의</label>
</CustomObject>