force-app/main/default/objects/IfStaticValue__c/fields/hub_aes_init_vector__c.field-meta.xml
<CustomField>
    <fullName>hub_aes_init_vector__c</fullName>
    <label>HUB VECTOR KEY</label>
    <length>16</length>
    <type>Text</type>
</CustomField>