force-app/main/default/objects/IfStaticValue__c/fields/hub_aes_private_key__c.field-meta.xml
<CustomField>
    <fullName>hub_aes_private_key__c</fullName>
    <label>HUB PRIVATE KEY</label>
    <length>32</length>
    <type>Text</type>
</CustomField>