force-app/main/default/objects/IfStaticValue__c/fields/hub_auth_password__c.field-meta.xml
<CustomField>
    <fullName>hub_auth_password__c</fullName>
    <label>HUB 비밀번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>