force-app/main/default/objects/IfStaticValue__c/fields/hub_auth_url__c.field-meta.xml
<CustomField>
    <fullName>hub_auth_url__c</fullName>
    <label>HUB AUTH URL</label>
    <type>Url</type>
</CustomField>