force-app/main/default/objects/IfStaticValue__c/fields/hub_oauth_client_secret__c.field-meta.xml
<CustomField>
    <fullName>hub_oauth_client_secret__c</fullName>
    <label>HUB CLIENT SECRET</label>
    <length>255</length>
    <type>Text</type>
</CustomField>