force-app/main/default/objects/IfStaticValue__c/fields/hub_url__c.field-meta.xml
<CustomField>
    <fullName>hub_url__c</fullName>
    <label>HUB URL</label>
    <type>Url</type>
</CustomField>