force-app/main/default/objects/IfStaticValue__c/fields/sfdc_aes_algorithm__c.field-meta.xml
<CustomField>
    <fullName>sfdc_aes_algorithm__c</fullName>
    <label>SFDC ENCRYPT ALGORITHM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>