force-app/main/default/objects/IfStaticValue__c/fields/sfdc_aes_init_vector__c.field-meta.xml
<CustomField>
    <fullName>sfdc_aes_init_vector__c</fullName>
    <label>SFDC VECTOR KEY</label>
    <length>16</length>
    <type>Text</type>
</CustomField>