force-app/main/default/objects/IfStaticValue__c/fields/sfdc_aes_private_key__c.field-meta.xml
<CustomField>
    <fullName>sfdc_aes_private_key__c</fullName>
    <label>SFDC PRIVATE KEY</label>
    <length>32</length>
    <type>Text</type>
</CustomField>