force-app/main/default/objects/IfStaticValue__c/fields/sfdc_oauth_client_id__c.field-meta.xml
<CustomField>
    <fullName>sfdc_oauth_client_id__c</fullName>
    <label>SFDC CLIENT ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>