force-app/main/default/objects/IfStaticValue__c/fields/sfdc_oauth_password__c.field-meta.xml
<CustomField>
    <fullName>sfdc_oauth_password__c</fullName>
    <label>SFDC PASSWORD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>