force-app/main/default/objects/IfStaticValue__c/fields/sfdc_oauth_username__c.field-meta.xml
<CustomField>
    <fullName>sfdc_oauth_username__c</fullName>
    <label>SFDC USER NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>