force-app/main/default/objects/IfStaticValue__c/fields/sfdc_org_url__c.field-meta.xml
<CustomField>
    <fullName>sfdc_org_url__c</fullName>
    <label>SFDC ORG URL</label>
    <type>Url</type>
</CustomField>